--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -25,7 +25,49 @@ html {
   scroll-behavior: smooth;
 }
 
+
+/* Global CSS o en un archivo CSS de componente */
+body {
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+.view {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.block {
+  height: 200px;
+  width: 300px;
+  margin: 50px;
+  border: 0.5mm solid black;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+    clip-path: inset(100% 100% 0 0);
+  }
+  to {
+    opacity: 1;
+    clip-path: inset(0 0 0 0);
+  }
+}
+
 /* Si necesitas hacer algún ajuste a nivel global */
 body {
   padding-top: 80px; /* Para evitar que el header fijo tape el contenido */
 }
+
+
